(c) 2013-2014 Claudio Satriano <satriano@ipgp.fr>,
              Emanuela Matrullo <matrullo@geologie.ens.fr>,
              Agnès Chounet <chounet@ipgp.fr>
(c) 2015 Claudio Satriano <satriano@ipgp.fr>
Derived from sspec_v1.0.sh by Aldo Zollo and Claudio Satriano

v0.9 -
	- Traces are filtered before computing S/N ratio
	- Trace clipping detection (via the "clip_max" parameter)
	- Code cleaning and optimization:
		- Switch from optparse (deprecated) to argparse
	- BUGFIX: Fix a major bug in reading hypo pick file
	- BUGFIX: Fix for pick file not read in source_model
v0.8 - 2014-07-11
	- Trace plot showing S and noise time windows
	- Improved handling of paz files
	- Per-station Mo on output file
	- Code cleaning and optimization
v0.7 - 2014-04-07
	- Code reorganization:
		- inversion code splitted to its own functions
	- Option to use bounded inversion
	- Station residuals, through ssp_residuals.py
	- source_model can now output tables of trade-off
		between parameters
	- Fix in the way nois trace is computed and processed
	- Documentation!
v0.6 - 2013-06-05 - Several improvements:
	- Signal to noise weighitng
	- Improved local magnitude computation
	- New options:
		- time domain integration
		- vertical component
	- Largely improved plotting function
	- More data formats supported (Antilles, IPOC)
	- source_model: a code for plotting theoretical spectra
	- Code refactoring
v0.5 - 2013-02-10 - Several improvements:
	- Azimuth computation
	- Construction of an overall database
	- Local magnitude computation
	- konnoOhmachiSmoothing
v0.4 - 2012-04-10 - Several improvements:
	- Logging infastructure
	- Code reorganization
v0.3 - 2012-02-10 - Several improvements:
	- Output is no more printed at screen, but to file
	- The plots can be saved to a file as well
	- We differentiate between short periods and broad bands
v0.2 - 2012-02-06 - Extended and generalized for the CRL application
v0.1 - 2012-01-17 - Initial Python port


Original changelog: