@@ -21,7 +21,7 @@ dataless = string(default=None)
 # Alternatively, a directory with PAZ files can be specified:
 paz = string(default=None)
 
-# Traceid file for station SCNL correction (optional):
+# Traceid file, in json format, for station SCNL correction (optional):
 traceids = string(default=None)
 
 # Database file for storing output parameters (optional):
